# motor_controller

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  MIT  README.md  SKILL.MD  filestructure.txt  run_sim.bat  run_sim.sh
cpp/inc/: bootloader.h  comm_server.h  hal_flash.h  hal_gpio.h  hal_spi.h  hal_timer.h  motor_algo.h  motor_control.h
cpp/src/: bootloader.cpp  comm_server.cpp  hal_flash.cpp  hal_gpio.cpp  hal_spi.cpp  hal_timer.cpp  main.cpp  motor_control.cpp
docs/: design.md
python_tools/: gui_tuner.py  plot_logs.py
rust/: Cargo.toml  cbindgen.toml
rust/src/: foc.rs  lib.rs  motor_model.rs  pi.rs
